# 3D-Word-Cloud

./: README.md  setup.sh
backend/: .gitignore  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  text.txt
backend/database/: database.py
backend/models/: models.py
backend/routers/: analyze.py
backend/schemas/: schemas.py
backend/scraper/: processor.py  scraper.py  url_processor.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  utils.ts
frontend/src/components/: Cloud.tsx  SubmitURL.tsx
