[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bertopic>=0.17.4",
    "bs4>=0.0.2",
    "fastapi[all]>=0.133.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
]
