[project]
name = "backend"
version = "0.1.0"
description = "Scrapes wikipedia articles and performs topic analysis"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bertopic>=0.17.4",
    "bs4>=0.0.2",
    "fastapi[all]>=0.133.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.47",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]